@@ -5,8 +5,8 @@ Description: Barzilai-Borwein Spectral Methods for solving nonlinear system of
  constraints.
 Depends: R (>= 2.6.1)
 Suggests: numDeriv, setRNG
-Version: 2008.11-1
-Date: 2008-11-24
+Version: 2009.1-1
+Date: 2009-1-13
 LazyLoad: yes
 License: GPL-3
 Author: Ravi Varadhan
