@@ -1,4 +1,5 @@
 export(
+  "BBsolve",
   "sane",
   "dfsane",
   "spg")
