@@ -1,3 +1,10 @@
+           Changes in BB version 2009.x-x
+  
+  o added BBsolve wrapper function.  
+
+  o minor documentation fixes found by the new parser in R-devel.
+
+
            Changes in BB version 2008.11-1
   
   o "eps" decreased to 1.e-10 (from 1.e-08) in sane, to be consistent 
